<resources>
    <string name="app_name">LightWave</string>
    <string name="switch_label_state">State</string>
    <string name="dow_monday">Monday</string>
    <string name="dow_tuesday">Tuesday</string>
    <string name="dow_wednesday">Wednesday</string>
    <string name="dow_thursday">Thursday</string>
    <string name="dow_friday">Friday</string>
    <string name="dow_saturday">Saturday</string>
    <string name="dow_sunday">Sunday</string>
    <string name="time_midnight">0:00</string>
    <string name="text_alarms">Alarms</string>
    <string name="text_dawn_time">Dawn time</string>
    <string name="zero_min">0 min</string>
    <string name="led_off">Led off</string>
    <string name="update">Update</string>
    <string name="lamp_control">Lamp control</string>
    <string name="connect">Connect</string>
    <string name="alarms">Alarms</string>
    <string name="led">Led</string>
    <string name="effects">Effects</string>
    <string name="settings">Settings</string>
    <string name="breath_mode">Breath mode</string>
    <string name="light_control">Light control</string>
    <string name="garland">Garland</string>
    <string name="speed">Speed</string>
    <string name="param">Param</string>
    <string name="send">Send</string>
    <string name="type_command">Type command</string>
    <string name="github">Github</string>
    <string name="authors">Authors</string>
    <string name="sync_time">Sync time</string>
</resources>