<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editCommand"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSettings"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:digits="01234 56789"
        android:hint="@string/type_command"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSettings"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/editCommand"
        android:text="@string/send" />

    <Button
        android:id="@+id/buttonSyncTime"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCommand"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sync_time" />

    <Button
        android:id="@+id/buttonGithub"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSyncTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/github" />

    <Button
        android:id="@+id/buttonAuthors"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonGithub"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/authors" />

</RelativeLayout>