<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_alarms"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text1Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlarm"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_monday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text2Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_tuesday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text3Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_wednesday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text4Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_thursday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text5Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_friday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text6Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_saturday"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text7Al"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text6Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dow_sunday"
        android:textSize="22sp" />

    <Button
        android:id="@+id/butAl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlarm"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text1Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlarm"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl1"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text2Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl2"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text3Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl3"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text4Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl4"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text5Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl5"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text6Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl6"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/butAl7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text6Al"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text7Al"
        android:text="@string/time_midnight"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swAl7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text6Al"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/butAl7"
        android:text="@string/switch_label_state"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_dawn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text7Al"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_dawn_time"
        android:textSize="22sp" />

    <Button
        android:id="@+id/butDawnTime"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text7Al"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text_dawn_time"
        android:text="@string/zero_min"
        android:textSize="20sp" />



</RelativeLayout>