<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/led_off"
            android:id="@+id/butLedOff"
            android:layout_marginHorizontal="10dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorLamp"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <Spinner
        android:id="@+id/spinnerEffects"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        >
        <TextView
            android:id="@+id/textSpeed"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/speed"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/seekBarSpeed"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:max="255"
            android:progress="126"
            />

        <TextView
            android:id="@+id/textParam"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/param"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/seekBarParam"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:max="255"
            android:progress="126"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="2"
            android:drawableTop="@drawable/ic_wb_incandescent_black_24dp"
            android:id="@+id/butLamp"
            app:cornerRadius="28dp" />

    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:minHeight="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/textBright"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="200"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/seekBarBright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:max="255"
            android:progress="200"
            />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/breathBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/breath_mode"
        android:textSize="20sp" />


</LinearLayout>